United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6879572 SA fails with "RuntimeException: field "_is_marked_dependent" not found in type instanceKlass"
6879572 : SA fails with "RuntimeException: field "_is_marked_dependent" not found in type instanceKlass"

Details
Type:
Bug
Submit Date:
2009-09-07
Status:
Closed
Updated Date:
2012-02-01
Project Name:
JDK
Resolved Date:
2009-12-03
Component:
hotspot
OS:
generic,solaris_10
Sub-Component:
svc
CPU:
x86,generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs16,6u18
Fixed Versions:
hs16

Related Reports
Backport:
Backport:
Backport:
Backport:
Duplicate:
Relates:

Sub Tasks

Description
Any attempt to use SA fails with

Exception in thread "main" java.lang.ExceptionInInitializerError
       at sun.jvm.hotspot.oops.ObjectHeap.newOop(ObjectHeap.java:373)
       at sun.jvm.hotspot.memory.SystemDictionary.newOop(SystemDictionary.java:144)
       at sun.jvm.hotspot.memory.SystemDictionary.getSystemKlass(SystemDictionary.java:127)
       at sun.jvm.hotspot.runtime.VM.readSystemProperties(VM.java:831)
       at sun.jvm.hotspot.runtime.VM.getSystemProperties(VM.java:825)
       at sun.jvm.hotspot.runtime.VM.getSystemProperty(VM.java:819)
       at sun.jvm.hotspot.jdi.VirtualMachineImpl.version(VirtualMachineImpl.java:810)
       at sun.jvm.hotspot.jdi.VirtualMachineImpl.name(VirtualMachineImpl.java:816)
       at nsk.sajdi.SADebugServerAttachingConnector.attach.attach002.runIt(attach002.java:112)
       at nsk.sajdi.SADebugServerAttachingConnector.attach.attach002.run(attach002.java:26)
       at nsk.sajdi.SADebugServerAttachingConnector.attach.attach002.main(attach002.java:21)
Caused by: java.lang.RuntimeException: field "_is_marked_dependent" not found in type instanceKlass
       at sun.jvm.hotspot.types.basic.BasicType.getField(BasicType.java:183)
       at sun.jvm.hotspot.types.basic.BasicType.getField(BasicType.java:190)
       at sun.jvm.hotspot.types.basic.BasicType.getField(BasicType.java:194)
       at sun.jvm.hotspot.types.basic.BasicType.getCIntegerField(BasicType.java:257)
       at sun.jvm.hotspot.oops.InstanceKlass.initialize(InstanceKlass.java:92)
       at sun.jvm.hotspot.oops.InstanceKlass.access$000(InstanceKlass.java:37)
       at sun.jvm.hotspot.oops.InstanceKlass$1.update(InstanceKlass.java:41)
       at sun.jvm.hotspot.runtime.VM.registerVMInitializedObserver(VM.java:373)
       at sun.jvm.hotspot.oops.InstanceKlass.<clinit>(InstanceKlass.java:39)
       ... 11 more

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/master/rev/f00a893fee8c
                                     
2009-10-04
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/83c29a26f67c
                                     
2009-09-25
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/83c29a26f67c
                                     
2009-09-17
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/baseline/rev/f00a893fee8c
                                     
2009-09-11



Hardware and Software, Engineered to Work Together