6879572: SA fails _is_marked_dependent not found

Reviewed-by: kamg, dcubed